--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
           cognito:
             poolId: <YOUR_COGNITO_APP_CLIENT_ID>
             clientId: <YOUR_COGNITO_APP_CLIENT_SECRET>
-            clientSecret: 1b5gbc7d6eas3oikq1mtlljmobge7eqvfng1kkjd82o75pkakv51
+            clientSecret: xxxxxxxxxxxxxxx
             scope: openid
-            redirect-uri: http://localhost:8080/login/oauth2/code/cognito
-            clientName: aws_security_app_yh
+            redirect-uri: http://localhost:8080/login/xxxxxxxxxxxxxxxx
+            clientName: aws_securityxxxxxxxxxxxx
         provider:
           cognito:
             issuerUri: https://cognito-idp.<YOUR_AWS_REGION>.amazonaws.com/<YOUR_USER_POOL_ID>
